<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hello World</string>
    <string name="nav_home">Home</string>
    <string name="nav_posts">Posts</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_eight">8</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
